# mjviser

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: active_viewer.py  active_viewer_with_controller.py  multi_env.py  passive_viewer.py
src/mjviser/: __init__.py  __main__.py  conversions.py  scene.py  viewer.py
tests/: conftest.py  test_cli.py  test_conversions.py  test_scene.py
typings/mujoco/rendering/: __init__.pyi
typings/mujoco/rendering/classic/: __init__.pyi  gl_context.pyi  renderer.pyi
